# sbtdd-workflow

./: .gitignore  CHANGELOG.md  LICENSE-APACHE  Makefile  README.md  RELEASES.md  conftest.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: v0.5.0-config-matrix.md
docs/audits/: v1.0.3-magi-gate-template-alignment.md
planning/: claude-plan-tdd-A.md  claude-plan-tdd-B.md  claude-plan-tdd-C.md  claude-plan-tdd-E.md  claude-plan-tdd-org-A.md  claude-plan-tdd-org-C.md  claude-plan-tdd-org-E.md  claude-plan-tdd-org.md  claude-plan-tdd.md  spec-snapshot.json
sbtdd/: sbtdd-workflow-plugin-spec-base.md  spec-behavior-base.md  spec-behavior.md
scripts/: cross_check_telemetry.py
skills/sbtdd/: SKILL.md
templates/: CLAUDE.local.md.template  conftest.py.template  gitignore.fragment  plugin.local.md.template  spec-behavior-base.md.template
tests/: conftest.py  test__plan_ops.py  test_auto_cmd.py  test_auto_cmd_audit_recover.py  test_auto_cmd_escalation_headless.py  test_auto_cmd_exit8.py  test_auto_cmd_inv25.py  test_auto_cmd_spec_review.py  test_auto_parallel_e2e.py  test_auto_progress.py  test_auto_run_audit.py  test_auto_streaming.py  test_changelog.py  test_claude_md_structure.py  test_close_phase_cmd.py  test_close_task_cmd.py  test_close_task_cmd_spec_review.py  test_commits.py  test_config.py  test_config_model_fields.py  test_cross_check_telemetry.py  test_ctest_reporter_empty_xml.py  test_dag_parser.py  test_dependency_check.py  test_dependency_check_models.py  test_dependency_check_python_floor.py  test_dispatch_heartbeat_wiring.py  test_distribution_coherence.py  test_doc_coherence_v108.py  test_drift.py  test_errors.py  test_escalation_prompt.py  test_finalize_cmd_override.py  test_heartbeat.py  test_heartbeat_smoke.py  test_hooks_installer.py  test_init_cmd.py  test_integration_full_cycle.py  test_inv_documentation.py  test_invoke_skill_callsites_audit.py  (+46 more)
tests/fixtures/: skill_stubs.py
tests/fixtures/parallel-e2e/: Makefile  dot-claude-settings.json  dot-gitignore  plan-fixture.md  pyproject.toml  spec-fixture.md
tests/fixtures/parallel-e2e/src/: sample.py
tests/fixtures/parallel-e2e/tests/: test_sample.py
(+51 files in other folders)
