[project]
name = "sbtdd-workflow"
version = "0.1.0"
requires-python = ">= 3.9"
description = "SBTDD + Superpowers multi-agent workflow orchestrator plugin for Claude Code"
license = "MIT OR Apache-2.0"
authors = [{name = "Julian Bolivar"}]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pyyaml>=6.0",
    "types-pyyaml>=6.0",
    "ruff>=0.3",
    "mypy>=1.5",
]

# Skip package discovery — this repo ships as a Claude Code plugin, not a
# Python package. The Python code lives under skills/sbtdd/scripts/ and is
# invoked by the plugin runtime via ${CLAUDE_PLUGIN_ROOT}, not via pip install.
[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["skills/sbtdd/scripts"]
markers = [
    "slow: tests with wall-clock >= 5s; CI may opt out via `pytest -m 'not slow'`",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
mypy_path = "skills/sbtdd/scripts"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "_pytest.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["tests.*", "conftest"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
disable_error_code = ["type-arg", "misc", "unused-ignore"]
